archive/claim-cards/v274/elmwood.md
# CLAIM CARD — elmwood  (v274, seed 42, 200 steps)

**Anchor:** Elmwood-Gordonsville mines (Carthage, Smith County, TN) — Central Tennessee MVT district; the world-reference stepped golden calcite scalenohedra, on honey sphalerite with purple fluorite + barite, in Knox Group paleokarst breccia
**Deposit:** The stepped-calcite showcase (calcite-morphology arc Phase 5). A waning MVT system: NaCl-CaCl2-MgCl2 basinal brine drops honey sphalerite, then fluorite + barite, and as the system cools, episodic brine expulsions (seismic pumping) drive an oscillating carbonate supply — the sigma curve crosses the stepped band again and again, and the late golden scalenohedral calcite records every pulse as a macrostep terrace. Watch them build.
**Initial:** 120 °C, 0.2 kbar, wall=irregular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+authenticated-midrun-activation+phase-resolved-testimony-v5|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-local-CuSO4-decay-v2|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-locality-licensed-heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v5|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores-v3|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v10|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+TSNB301-questionable-rhodochrosite-excluded-v1|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+controlled-production-engine-witness+solid-state-transformation+null-confining-pressure-v5|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|save-identity:version+model+scenario+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+water-height+full-zone-ledgers+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v5
**Scenario spec hash:** b692395cc2b3295a7dc7d0e1008b1324baba92c18d49d532c92f85a51a5457f1
**Archived strip SHA-256:** c01eb316ef4490e1b33ef8b45661a4635a2b7da8c21ae1b7af913fc8b5d6e2b7

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (4):** sphalerite, fluorite, barite, calcite
**Deterministic accessories (2):** celestine — Documented at Elmwood, including Ba-bearing celestine, and compatible with the scenario's sulfate-brine stage.; chalcedony — The audited Elmwood inventory includes quartz and silica; microcrystalline silica is allowed as subordinate late gangue rather than a headline promise.
**Statistical (0):** (none)
**Aspirational (2):** galena — Galena is documented at Elmwood-Gordonsville, but the valence-correct SIM 268 brine does not deliver a reproducible Pb-sulfide window in the three-seed evidence panel.; pyrite — Pyrite is documented in the Elmwood regional inventory, but it is not produced by the present valence-correct sulfur trajectory.
**Locality exclusions (3):** anhydrite — Not documented in the audited Elmwood-Gordonsville inventory, and the valence-separated Elmwood brine produces none in the three-seed commissioning panel. A former modeled-accessory classification improperly substituted chemical plausibility for locality evidence.; siderite — Not documented in the audited Elmwood-Gordonsville inventory; the stepped-calcite variety model cannot be allowed to manufacture an Fe-carbonate locality claim.; strontianite — The audited Elmwood-Gordonsville inventory documents strontium-bearing barite and barium-bearing celestine, but not discrete strontianite; Sr must remain in the documented sulfate family here.

**Cited sources:**
  - Gratz & Misra 1987 (Econ. Geol. 82) — Elmwood-Gordonsville fluid-inclusion microthermometry
  - Misra & Lu 1992 — Central Tennessee zinc district paragenesis
  - Kyle 1976 / district literature — Knox unconformity paleokarst breccia ore control
  - RESEARCH-calcite-morphology-2026-06-11.md §2 — oscillatory sigma -> step bunching (Movements as the driver)
  - Sibson 1992 fault-valve mechanics — episodic brine expulsion (the pulse-train shape)
  - Hanor 2000, RiMG 40 — Sr release during carbonate recrystallization and dolomitization
  - Mindat Elmwood-Gordonsville locality inventory (audited 2026-07-25)
  - Handbook of Mineralogy — celestine crystals to 45 cm
  - Royal Ontario Museum celestine reference specimen — 46 cm crystal width

**Claim-level citations:**
  - elmwood-celestine-license: Celestine, including Ba-bearing celestine, is documented at Elmwood-Gordonsville; this licenses the phase but not an arbitrary habit or abundance. — Mindat Elmwood-Gordonsville locality inventory (audited 2026-07-25)
  - elmwood-celestine-stage: The Sr pulse is an Elmwood-only authored diagenetic-carbonate recrystallization event; production habit is resolved by the shared classifyCelestineHabit authority. — Hanor 2000, RiMG 40 — Sr release during carbonate recrystallization and dolomitization; Misra & Lu 1992 — Central Tennessee zinc district paragenesis
  - celestine-individual-size: The individual-crystal authority is 46 cm and is kept separate from fibrous or nodular aggregate extent. — Handbook of Mineralogy — celestine crystals to 45 cm; Royal Ontario Museum celestine reference specimen — 46 cm crystal width
  - elmwood-masked-layer-hypothesis: The clay/iron-film, stall, and renewed-barite sequence is a disclosed simulator hypothesis for testing cyclic masked growth. It is not presented as a documented Elmwood specimen texture; the locality sources support the barite-bearing paragenesis and episodic mixing, while the layer mechanism is general mineral-ontogeny authority. — Misra & Lu 1992 — Central Tennessee district paragenesis, not an Elmwood coating-texture report; Hanor 2000, Reviews in Mineralogy and Geochemistry 40 — sulfate-barite fluid mixing, not an Elmwood coating-texture report; Grigor'ev 1965, Ontogeny of Minerals; Sunagawa 2005, Crystals: Growth, Morphology, and Perfection — general cyclic encrustation and growth-front authority

## Paragenetic order as grown (6 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | calcite | 1 | 1 | 0 | nucleation |
| 2 | fluorite | 15 | 1 | 0 | nucleation |
| 3 | sphalerite | 15 | 1 | 0 | nucleation |
| 4 | barite | 16 | 6 | 0 | nucleation |
| 5 | celestine | 31 | 6 | 0 | nucleation |
| 6 | chalcedony | 126 | 1 | 0 | nucleation |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** galena, pyrite
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 119.99514125 → 53.265753104712054 °C  [53.265753104712054, 119.99514125] (raw_simulation_state)
  - pH: 7.1 → 8.224301335386027   [7.1, 8.407418576202472] (raw_simulation_state)
  - Eh: 24.4850021680094 → 24.4850021680094 mV  [24.4850021680094, 24.4850021680094] (raw_simulation_state)
  - salinity: 21 → 21 psu  [21, 21] (raw_simulation_state)
  - O2: 0.25 → 0.25 ppm (mg/kg solvent)  [0.25, 0.25] (raw_simulation_state)
  - concentration: 1 → 1 ×  [1, 1] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: 0.504 → 1.827  [0.504, 2.394]
  - SI_aragonite: 0.441 → 1.701  [0.441, 2.268]
  - SI_dolomite: 0.567 → 3.213  [0.441, 4.157]
  - SI_HMC: 0.63 → 1.953  [0.63, 2.52]
  - SI_siderite: 1.323 → 2.898  [1.323, 3.402]
  - SI_selenite: -8 → -0.63  [-8, -0.567]
  - SI_anhydrite: -8 → -0.756  [-8, 0.315]
  - SI_barite: -8 → 1.701  [-8, 2.583]
  - SI_celestine: -8 → -0.126  [-8, 0.378]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 0.2 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 2.503 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 60.94 °C; initial a_w=0.988 ±0.020 (temperature-extrapolation)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: temperature-clamped-to-envelope; active=true; ΔlogK=0.18226480750000001; Requested 120 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - aragonite: temperature-clamped-to-envelope; active=true; ΔlogK=0.1746481; Requested 120 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - dolomite: active; active=true; ΔlogK=0.3598611525; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.360 relative to 1 bar at the same temperature.
    - siderite: active; active=true; ΔlogK=0.18191145999999997; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.182 relative to 1 bar at the same temperature.
    - rhodochrosite: active; active=true; ΔlogK=0.171840952; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.172 relative to 1 bar at the same temperature.
    - anhydrite: active; active=true; ΔlogK=0.14664092950000002; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.147 relative to 1 bar at the same temperature.
    - barite: active; active=true; ΔlogK=0.140978401; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.141 relative to 1 bar at the same temperature.
    - celestine: active; active=true; ΔlogK=0.1456838835; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.146 relative to 1 bar at the same temperature.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Stress/overprint step 70: tectonic_shock — resolved-shear threshold pulse; fluid pressure unchanged; no creep law

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 0.2 → 0.2 kbar [0.2, 0.2], n=200
  - Rock/confining pressure: not recorded
  - Temperature: 119.99514125 → 53.265753104712054 °C [53.265753104712054, 119.99514125], n=200
  - Secure aragonite assessment: 0/200 executed steps; first={"boundary_kbar":2.503188304433579,"secure_aragonite":false}, last={"boundary_kbar":2.799102347613322,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":200}; first=unconstrained, last=unconstrained
  - Executed stress step 70: σdiff=50 MPa; affected crystal IDs=[]; outcomes={"below_crss":1}
  - Mineral transformations: none executed.
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v1/23bade18c1f579f7afdbbe5a8a19318ab3e4ab79641548cf4359a550b1589a83.
    - No controlled reactivity witness is applicable to a transformation product in this locality run.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact rows are authenticated by the strip SHA-256
  - Closure: 6/6 transactions; all_closed=true.
  - Step 28: closed=true; declarations=[{"kind":"addition","source":"Misra & Lu 1992; Hanor 2000, RiMG 40:193 — Elmwood barite records mixing between the Ba-bearing ore brine and an oxidized sulfate-bearing water; 106 ppm sulfate-S is a disclosed SIM-scale pulse floor, not a measured inclusion concentration","fields":{"Ba":10}}]; testimony=[{"field":"Ba","before":18,"after":28,"declaredAddition":10,"declaredReplacementTarget":null,"declaredDelta":10,"declaredImports":10,"declaredExports":0,"actualDelta":10,"error":0,"tolerance":1e-7,"closed":true}].
  - Step 40: closed=true; declarations=[{"kind":"replacement","source":"Misra & Lu 1992 and Hanor 2000, RiMG 40:193 support Elmwood barite paragenesis and episodic sulfate-fluid mixing but do not document clay or iron-oxide coatings on Elmwood barite; Grigor'ev 1965 and Sunagawa 2005 provide only the general mineral-ontogeny basis for this disclosed simulator hypothesis; 4 ppm Ba is a SIM-scale target, not a measured inclusion concentration","fields":{"Ba":4}}]; testimony=[{"field":"Ba","before":28,"after":4,"declaredAddition":0,"declaredReplacementTarget":4,"declaredDelta":-24,"declaredImports":0,"declaredExports":24,"actualDelta":-24,"error":0,"tolerance":1e-7,"closed":true}].
  - Step 50: closed=true; declarations=[{"kind":"addition","source":"Misra & Lu 1992; Hanor 2000, RiMG 40:193 — Elmwood barite records mixing between the Ba-bearing ore brine and an oxidized sulfate-bearing water; 106 ppm sulfate-S is a disclosed SIM-scale pulse floor, not a measured inclusion concentration","fields":{"Ba":24}}]; testimony=[{"field":"Ba","before":4,"after":28,"declaredAddition":24,"declaredReplacementTarget":null,"declaredDelta":24,"declaredImports":24,"declaredExports":0,"actualDelta":24,"error":0,"tolerance":1e-7,"closed":true}].
  - Step 60: closed=true; declarations=[{"kind":"replacement","source":"Misra & Lu 1992 and Hanor 2000, RiMG 40:193 support Elmwood barite paragenesis and episodic sulfate-fluid mixing but do not document clay or iron-oxide coatings on Elmwood barite; Grigor'ev 1965 and Sunagawa 2005 provide only the general mineral-ontogeny basis for this disclosed simulator hypothesis; 4 ppm Ba is a SIM-scale target, not a measured inclusion concentration","fields":{"Ba":4}}]; testimony=[{"field":"Ba","before":28,"after":4,"declaredAddition":0,"declaredReplacementTarget":4,"declaredDelta":-24,"declaredImports":0,"declaredExports":24,"actualDelta":-24,"error":0,"tolerance":1e-7,"closed":true}].
  - Step 68: closed=true; declarations=[{"kind":"addition","source":"Misra & Lu 1992; Hanor 2000, RiMG 40:193 — Elmwood barite records mixing between the Ba-bearing ore brine and an oxidized sulfate-bearing water; 106 ppm sulfate-S is a disclosed SIM-scale pulse floor, not a measured inclusion concentration","fields":{"Ba":24}}]; testimony=[{"field":"Ba","before":4,"after":28,"declaredAddition":24,"declaredReplacementTarget":null,"declaredDelta":24,"declaredImports":24,"declaredExports":0,"actualDelta":24,"error":0,"tolerance":1e-7,"closed":true}].
  - Step 78: closed=true; declarations=[{"kind":"replacement","source":"Misra & Lu 1992 and Hanor 2000, RiMG 40:193 support Elmwood barite paragenesis and episodic sulfate-fluid mixing but do not document clay or iron-oxide coatings on Elmwood barite; Grigor'ev 1965 and Sunagawa 2005 provide only the general mineral-ontogeny basis for this disclosed simulator hypothesis; 4 ppm Ba is a SIM-scale target, not a measured inclusion concentration","fields":{"Ba":4}}]; testimony=[{"field":"Ba","before":28,"after":4,"declaredAddition":0,"declaredReplacementTarget":4,"declaredDelta":-24,"declaredImports":0,"declaredExports":24,"actualDelta":-24,"error":0,"tolerance":1e-7,"closed":true}].

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Ledger activation: step 15, kind=legacy_combined_to_explicit_reservoirs, closed=true; initial fluid=0 ppm; initial solid=0 ppm.
  - Closure: 186/186 samples; all_closed=true; max |balance error|=1.5832483768463135e-8 ppm; max |testimony error|=1.257285475730896e-8 ppm.
  - Fluid reservoirs (sulfide/sulfate/elemental), first → last: {"sulfide":729599.9284655318,"sulfate":192000,"elemental":0} → {"sulfide":729585.3783900164,"sulfate":813975.2321747071,"elemental":0}.
  - Solid reservoirs, first → last: {"sulfide":0.07153446835120292,"sulfate":0,"elemental":0,"unclassified":0} → {"sulfide":14.621609985767776,"sulfate":104.76782529354915,"elemental":0,"unclassified":0}.
  - Phase identities: barite→sulfate, celestine→sulfate, sphalerite→sulfide.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 1769; formula-bearing=0; solid-solution=0; binding competition=0; reactive transformation etches=0; masked horizons=12.
  - Masked horizon crystal 4, film step 40, breakthrough step 50: barite through clay; coverage term/prism=0.3/0.3; thickness=24.227780198481522 µm.
  - Masked horizon crystal 5, film step 40, breakthrough step 50: barite through clay; coverage term/prism=0.3/0.3; thickness=24.865923514581606 µm.
  - Masked horizon crystal 6, film step 40, breakthrough step 50: barite through clay; coverage term/prism=0.3/0.3; thickness=22.74502128758754 µm.
  - Masked horizon crystal 7, film step 40, breakthrough step 50: barite through clay; coverage term/prism=0.3/0.3; thickness=21.758596054502032 µm.
  - Masked horizon crystal 8, film step 40, breakthrough step 50: barite through clay; coverage term/prism=0.3/0.3; thickness=23.80338722618746 µm.
  - Masked horizon crystal 9, film step 40, breakthrough step 50: barite through clay; coverage term/prism=0.3/0.3; thickness=2.3506715668617026 µm.
  - Masked horizon crystal 4, film step 60, breakthrough step 68: barite through iron oxide; coverage term/prism=0.3/0.3; thickness=22.570182725219112 µm.
  - Masked horizon crystal 5, film step 60, breakthrough step 68: barite through iron oxide; coverage term/prism=0.3/0.3; thickness=25.280416391072734 µm.
  - Masked horizon crystal 6, film step 60, breakthrough step 68: barite through iron oxide; coverage term/prism=0.3/0.3; thickness=25.2401852281181 µm.
  - Masked horizon crystal 7, film step 60, breakthrough step 68: barite through iron oxide; coverage term/prism=0.3/0.3; thickness=25.135598646307038 µm.
  - Masked horizon crystal 8, film step 60, breakthrough step 68: barite through iron oxide; coverage term/prism=0.3/0.3; thickness=23.818559864380152 µm.
  - Masked horizon crystal 9, film step 60, breakthrough step 68: barite through iron oxide; coverage term/prism=0.3/0.3; thickness=3.0068357202282097 µm.
  - Habit crystal 1: calcite; stepped_scalenohedral; extent=individual; forms=["v{211} scalenohedron, gentle growth steps","dog-tooth"]; size authority={"extent_kind":"individual","cap_cm":2000,"record_cm":1000}; CDR=null.
  - Habit crystal 2: fluorite; cubic; extent=individual; forms=["{100} cube"]; size authority={"extent_kind":"individual","cap_cm":400,"record_cm":200}; CDR=null.
  - Habit crystal 3: sphalerite; tetrahedral; extent=individual; forms=["{111} tetrahedron"]; size authority={"extent_kind":"individual","cap_cm":80,"record_cm":40}; CDR=null.
  - Habit crystal 4: barite; snowball; extent=individual; forms=["radiating bladed sphere","on sulfide seed core"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 5: barite; snowball; extent=individual; forms=["radiating bladed sphere","on sulfide seed core"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 6: barite; snowball; extent=individual; forms=["radiating bladed sphere","on sulfide seed core"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 7: barite; snowball; extent=individual; forms=["radiating bladed sphere","on sulfide seed core"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 8: barite; snowball; extent=individual; forms=["radiating bladed sphere","on sulfide seed core"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 9: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 10: celestine; nodular; extent=aggregate; forms=["geodal lining","concentric blue crust"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 11: celestine; nodular; extent=aggregate; forms=["geodal lining","concentric blue crust"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 12: celestine; nodular; extent=aggregate; forms=["geodal lining","concentric blue crust"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 13: celestine; nodular; extent=aggregate; forms=["geodal lining","concentric blue crust"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 14: celestine; nodular; extent=aggregate; forms=["geodal lining","concentric blue crust"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 15: celestine; nodular; extent=aggregate; forms=["geodal lining","concentric blue crust"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 16: chalcedony; botryoidal_chalcedony; extent=individual; forms=["radiating fibrous spherulites","botryoidal cryptocrystalline crust"]; size authority={"extent_kind":"individual","cap_cm":100,"record_cm":50}; CDR=null.
  - Surviving surface film crystal 4: barite; {"mineral":"clay","phi_term":0.45,"phi_prism":0.45,"step":78}.
  - Surviving surface film crystal 5: barite; {"mineral":"clay","phi_term":0.45,"phi_prism":0.45,"step":78}.
  - Surviving surface film crystal 6: barite; {"mineral":"clay","phi_term":0.45,"phi_prism":0.45,"step":78}.
  - Surviving surface film crystal 7: barite; {"mineral":"clay","phi_term":0.45,"phi_prism":0.45,"step":78}.
  - Surviving surface film crystal 8: barite; {"mineral":"clay","phi_term":0.45,"phi_prism":0.45,"step":78}.
  - Surviving surface film crystal 9: barite; {"mineral":"clay","phi_term":0.45,"phi_prism":0.45,"step":78}.

## Scenario notes (author's own rationale)
> Anchor: Elmwood-Gordonsville (Central Tennessee zinc district). Fluid inclusions per Gratz & Misra 1987 (Econ. Geol. 82): sphalerite Th ~90-150°C, NaCl-CaCl2-MgCl2 brines ~20-23 wt% NaCl-eq. Ore in paleokarst/collapse breccias of the upper Knox Group beneath the post-Knox unconformity.

> Paragenesis (Misra & Lu 1992; district consensus): replacement dolomite -> honey-amber sphalerite (main ore) -> purple fluorite + barite (galena minor in Central TN, unlike Tri-State) -> GIANT GOLDEN CALCITE LAST, scalenohedral, stepped faces + phantoms, often perched on sphalerite; bitumen/oil inclusions give the golden body color (the district carries live hydrocarbons).

> Mg:Ca ~0.2 — a dolostone-buffered MgCl2-bearing brine (the host IS dolostone; Gratz & Misra report Mg-rich inclusions). Above the 0.15 elongation threshold (GCA 2015 / Phase 4): the form axis makes the late calcite SCALENOHEDRAL at low T, which is exactly what Elmwood grows. Mn kept at 4 (below the manganocalcite branch's >5 gate) with Fe 8 — Elmwood calcite is golden dogtooth, not botryoidal manganocalcite.

> The movements are the showcase: a naica-shape cooling trend (120 -> 55°C, the waning system) + a fluid.CO3 PULSE TRAIN in the late half (five gaussian brine-expulsion pulses, the MVT seismic-pumping mechanism — Sibson-style fault-valve episodicity). Each pulse pushes calcite sigma up through the stepped band and relaxes back: the oscillation IS the step-bunching driver (research doc §2 — the steps are the chemistry curve made solid).

> MINDAT VALID-SPECIES REFERENCE (boss-supplied screenshot, 2026-07-25 — the region's full mineral list incl. sub-localities, 11 valid): Baryte (+ var. Strontium-bearing Baryte), Calcite, Celestine (+ var. Barium-bearing Celestine), Dolomite, Fluorite, Galena, Marcasite, 'Petroleum var. Bitumen', Pyrite, Quartz, 'Silica', Sphalerite, Vaterite. This is the TERMINAL-VERIFICATION list for this scenario: (a) no gypsum-family mineral; (b) siderite is explicitly excluded because the audited inventory does not license it; (c) documented but presently aspirational or unfired phases include marcasite, pyrite, quartz, vaterite and bitumen; (d) Sr-bearing baryte supports the sulfate story and Ba-bearing celestine supports the late blanket. The clay/iron masked-layer sequence is separately and explicitly disclosed as a simulator hypothesis, not inferred from this species list.
